# task_manager

./: .gitignore  docker-compose.yaml  readme.md
backend/: README.md  pyproject.toml
backend/deployment/: Dockerfile
backend/src/task_manager/: __init__.py  config.py  main.py  models.py  task_runner.py
backend/src/task_manager/db/: connection.py  crud.py  models.py
backend/src/task_manager/routes/: api.py  v1.py
backend/tests/: test_v1.py
backend/tools/: setup_db.py
frontend/: README.md  package-lock.json  package.json
frontend/deployment/: Dockerfile
frontend/src/: App.tsx
frontend/src/api/: taskApi.ts
frontend/src/components/: TaskForm.tsx  TaskList.tsx
frontend/src/types/: task.ts
