[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager"
version = "0.1.0"
authors = [
    { name = "Deirdre Meehan", email = "deirdremeehan16@gmail.com" },
]
description = "A task management system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=6.0",
    "httpx",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.910",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 